--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
   <head>
     <title>Jessica Weber</title>
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
     <meta content="width=device-width,maximum-scale=1.0,initial-scale=1.0,minimum-scale=1.0,user-scalable=yes" name="viewport">
+    <link href="https://fonts.googleapis.com/css?family=Lato:900|Roboto+Condensed:700|Roboto+Mono:500|Roboto:300" rel="stylesheet">
   </head>
   <body>
     <div class='topnav'>
-      <a href="#home"><span>Jessica Weber</span></a>
+      <a href="#home" class='firsttopnav'><span>Jessica Weber</span></a>
       <a href="#about"><span>About</span></a>
       <a href="#experience"><span>Experience</span></a>
       <a href="#skills"><span>Skills</span></a>
@@ -18,12 +19,12 @@
         <h1>About</h1>
       </div>
         <div class="img">
-          <img src="images/jessica_weber.jpg" alt="jwebs3" class="thumbnail">
+          <img src="images/jrw_2018.jpg" alt="Jessica Weber" class="thumbnail">
         </div>
         <div class="rightside">
-            <p><b>Any road followed precisely to its end leads precisely nowhere.</b></p>
-            <p>Hey everyone, I’m Jess. I currently live in St. Louis and am learning to code as a way to further my education and give back to the community at some point. I've liked the little bit of coding I've gotten to do in my career and I'm eager to learn more.</p>
-            <p>My primary goal for this site is to showcase my newfound skills and also use it as a practice site for my coding. I anticipate a lot of updates. :)</p>
+          <p><b>Any road followed precisely to its end leads precisely nowhere.</b></p>
+          <p>Hey everyone, I’m Jess. I currently live in St. Louis and am learning to code as a way to further my education and give back to the community at some point. I've liked the little bit of coding I've gotten to do in my career and I'm eager to learn more.</br></p>
+          <p>My primary goal for this site is to showcase my newfound skills and also use it as a practice site for my coding. I anticipate a lot of updates. :)</p>
         </div>
       <div class="h1">
         <h1>Experience</h1>
@@ -37,20 +38,20 @@
       <div class="h1">
         <h1>Skills</h1>
       </div>
-        <div>
-          <p>HTML</p>
-        </div>
-        <div>
-          <p>CSS</p>
-        </div>
+        <div class="box1">HTML</div>
+        <div class="box1">CSS</div>
       <div class="h1">
         <h1>Projects</h1>
       </div>
-        <div>
-          <p>Project 1</p>
+        <div class="box2">
+          <h2>Project 1</h2>
+            <p>Project Description</p>
+            <a href="#about">Project Link</a>
         </div>
-        <div>
-          <p>Project 2</p>
+        <div class="box2">
+          <h2>Project 2</h2>
+            <p>Project Description</p>
+            <a href="#about">Project Link</a>
         </div>
       </div>
     </div>
